[gd_scene load_steps=13 format=3 uid="uid://cbkiy8o4vhyyv"]

[ext_resource type="MeshLibrary" uid="uid://d1vq4180vsu6v" path="res://assets/mesh/mesh_library.tres" id="1_saf0i"]
[ext_resource type="Script" path="res://game/level/1.gd" id="1_yph4k"]
[ext_resource type="MeshLibrary" uid="uid://b4qrpng1yhcwd" path="res://assets/mesh/divider_mesh_library.tres" id="2_3e86d"]
[ext_resource type="PackedScene" uid="uid://cdjcl5dow8yg3" path="res://game/entity/ball.tscn" id="2_wve0c"]
[ext_resource type="MeshLibrary" uid="uid://bouidkyboxgpm" path="res://assets/mesh/support_mesh_library.tres" id="4_iaoa1"]
[ext_resource type="Texture2D" uid="uid://c0vlr7oiuwpk3" path="res://assets/sprite/game/billboard/billboard_small.png" id="4_wsqqa"]
[ext_resource type="Texture2D" uid="uid://dv68h58swggph" path="res://assets/sprite/game/billboard/move.png" id="5_b1r6f"]
[ext_resource type="Texture2D" uid="uid://cou27qtsmviv2" path="res://assets/sprite/game/billboard/aim.png" id="5_vycf1"]
[ext_resource type="Texture2D" uid="uid://ct5hsan5kt4ue" path="res://assets/sprite/game/billboard/jump.png" id="6_fhjhi"]
[ext_resource type="Texture2D" uid="uid://cn44r1h5p4uct" path="res://assets/sprite/game/billboard/strike.png" id="7_uarlv"]
[ext_resource type="PackedScene" uid="uid://b3exind3c6l0b" path="res://game/props/elevator.tscn" id="10_hq6hc"]

[sub_resource type="BoxShape3D" id="BoxShape3D_fd7oj"]
size = Vector3(1, 5, 1)

[node name="1" type="Node3D"]
script = ExtResource("1_yph4k")

[node name="GridMap" type="GridMap" parent="." groups=["breakable"]]
mesh_library = ExtResource("1_saf0i")
cell_size = Vector3(1, 1, 1)
data = {
"cells": PackedInt32Array(-393215, 0, 65542, -393214, 0, 65542, -393212, 0, 65542, -393211, 0, 65542, -393210, 0, 65542, -393209, 0, 65542, -393208, 0, 65542, 458763, 0, 196614, 458762, 0, 65542, 458761, 0, 65542, 458760, 0, 65542, 524287, 0, 65542, 524286, 0, 65542, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 589848, 0, 0, 589849, 0, 0, 589850, 0, 0, 589851, 0, 0, 589813, 0, 0, 589812, 0, 0, 589814, 0, 0, 589815, 0, 0, 655352, 0, 0, 655353, 0, 0, 655354, 0, 0, 655355, 0, 0, 589820, 0, 0, 589821, 0, 0, 589822, 0, 0, 589823, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 524317, 0, 0, 524316, 0, 0, 524318, 0, 0, 524319, 0, 0, 589856, 0, 0, 589857, 0, 0, 589858, 0, 0, 589859, 0, 0, 458764, 0, 196614, -393204, 0, 196614, 458787, 0, 196614, -393203, 0, 196614, -393202, 0, 196614, -393201, 0, 196614, -393200, 0, 589830, -393199, 0, 589830, -393198, 0, 589830, -393197, 0, 589830, -393196, 0, 589830, -393195, 0, 589830, -393194, 0, 589830, -393193, 0, 589830, -393192, 0, 589830, -393191, 0, 589830, -393190, 0, 589830, -393189, 0, 589830, -393188, 0, 589830, -393187, 0, 589830, -393186, 0, 589830, -393185, 0, 589830, -393184, 0, 589830, -393183, 0, 589830, -393182, 0, 589830, 458765, 0, 196614, 458766, 0, 589830, 458767, 0, 589830, 458768, 0, 589830, 458769, 0, 589830, 458770, 0, 589830, 458771, 0, 589830, 458772, 0, 589830, 458773, 0, 589830, 458774, 0, 589830, 458775, 0, 589830, 458776, 0, 589830, 458777, 0, 589830, 458778, 0, 589830, 458779, 0, 589830, 458780, 0, 589830, 458781, 0, 589830, 458782, 0, 589830, 458783, 0, 589830, 458784, 0, 589830, 458785, 0, 589830, 458786, 0, 589830, 524324, 0, 0, 524326, 0, 0, 524325, 0, 0, 524327, 0, 0, 589864, 0, 0, 589865, 0, 0, 589866, 0, 0, 589867, 0, 0, 524332, 0, 0, 524333, 0, 0, 524334, 0, 0, 524335, 0, 0, 589872, 0, 0, 589873, 0, 0, 589874, 0, 0, 589875, 0, 0, 524340, 0, 0, 524341, 0, 0, 524342, 0, 0, 524343, 0, 0, 589880, 0, 0, 589881, 0, 0, 589882, 0, 0, 589883, 0, 0, 524348, 0, 0, 524349, 0, 0, 524350, 0, 0, 524351, 0, 0, 589888, 0, 0, 589889, 0, 0, 589890, 0, 0, 589891, 0, 0, 524356, 0, 0, 524357, 0, 0, 524358, 0, 0, 524359, 0, 0, 589896, 0, 0, 589897, 0, 0, 589898, 0, 0, 458788, 0, 196614, 458789, 0, 196614, 458790, 0, 196614, 458791, 0, 196614, 458792, 0, 196614, 458793, 0, 196614, 458794, 0, 196614, 458795, 0, 196614, 458796, 0, 196614, 458797, 0, 196614, 458798, 0, 196614, 458799, 0, 196614, 458800, 0, 196614, 458801, 0, 196614, 458802, 0, 196614, 458803, 0, 196614, 458804, 0, 196614, 458805, 0, 196614, 458806, 0, 196614, 458807, 0, 196614, 458808, 0, 196614, 458809, 0, 196614, 458810, 0, 196614, 458811, 0, 196614, 458812, 0, 196614, 458813, 0, 196614, 458814, 0, 196614, 458815, 0, 196614, 458816, 0, 196614, 458817, 0, 196614, 458818, 0, 196614, 458819, 0, 196614, 458820, 0, 196614, 458821, 0, 196614, 458822, 0, 196614, 458823, 0, 196614, 458824, 0, 196614, 458825, 0, 196614, 458826, 0, 196614, 458827, 0, 196614, 458828, 0, 196614, 458829, 0, 196614, 458830, 0, 196614, 458831, 0, 196614, 458832, 0, 196614, 458833, 0, 196614, 458834, 0, 196614, -393180, 0, 196614, -393179, 0, 196614, -393178, 0, 196614, -393176, 0, 196614, -393175, 0, 196614, -393174, 0, 196614, -393173, 0, 196614, -393172, 0, 196614, -393171, 0, 196614, -393170, 0, 196614, -393169, 0, 196614, -393168, 0, 196614, -393167, 0, 196614, -393166, 0, 196614, -393165, 0, 196614, -393164, 0, 196614, -393163, 0, 196614, -393162, 0, 196614, -393161, 0, 196614, -393160, 0, 196614, -393159, 0, 196614, -393158, 0, 196614, -393157, 0, 196614, -393156, 0, 196614, -393155, 0, 196614, -393154, 0, 196614, -393153, 0, 196614, -393152, 0, 196614, -393151, 0, 196614, -393150, 0, 196614, -393149, 0, 196614, -393148, 0, 196614, -393147, 0, 196614, -393146, 0, 196614, -393145, 0, 196614, -393144, 0, 196614, -393143, 0, 196614, -393142, 0, 196614, -393141, 0, 196614, -393140, 0, 196614, -393138, 0, 196614, -393137, 0, 196614, -393136, 0, 196614, -393135, 0, 196614, -393134, 0, 196614, -393133, 0, 6, -327597, 0, 6, -262061, 0, 6, -196525, 0, 6, -130989, 0, 6, 83, 0, 6, 65619, 0, 6, 131155, 0, 6, 196691, 0, 6, 262227, 0, 6, 327763, 0, 6, 393299, 0, 6, 458835, 0, 6, -393181, 0, 196614, 720884, 0, 196609, 720885, 0, 196609, 720886, 0, 196609, 720887, 0, 196609, 720888, 0, 196609, 720889, 0, 196609, 720890, 0, 196609, 720891, 0, 196609, 720892, 0, 196609, 720893, 0, 196609, 720894, 0, 196609, 720895, 0, 196609, 655360, 0, 196609, 655361, 0, 196609, 655362, 0, 196609, 655363, 0, 196609, 655364, 0, 196609, 655365, 0, 196609, 655366, 0, 196609, 655367, 0, 196609, 655368, 0, 196609, 655369, 0, 196609, 655370, 0, 196609, 655371, 0, 196609, 720908, 0, 196609, 720909, 0, 196609, 720910, 0, 196609, 720911, 0, 196609, 720912, 0, 196609, 720913, 0, 196609, 720914, 0, 196609, 720915, 0, 196609, 720916, 0, 196609, 720917, 0, 196609, 720918, 0, 196609, 720919, 0, 196609, 720920, 0, 196609, 720921, 0, 196609, 720922, 0, 196609, 720923, 0, 196609, 720924, 0, 196609, 720925, 0, 196609, 720926, 0, 196609, 720927, 0, 196609, 720928, 0, 196609, 720929, 0, 196609, 720930, 0, 196609, 720931, 0, 196609, 655396, 0, 196609, 655397, 0, 196609, 655398, 0, 196609, 655399, 0, 196609, 655400, 0, 196609, 655401, 0, 196609, 655402, 0, 196609, 655403, 0, 196609, 655404, 0, 196609, 655405, 0, 196609, 655406, 0, 196609, 655407, 0, 196609, 655408, 0, 196609, 655409, 0, 196609, 655410, 0, 196609, 655411, 0, 196609, 655412, 0, 196609, 655413, 0, 196609, 655414, 0, 196609, 655415, 0, 196609, 655416, 0, 196609, 655417, 0, 196609, 655418, 0, 196609, 655419, 0, 196609, 720956, 0, 196609, 720957, 0, 196609, 720958, 0, 196609, 720959, 0, 196609, 720960, 0, 196609, 720961, 0, 196609, 720962, 0, 196609, 720963, 0, 196609, 720964, 0, 196609, 720965, 0, 196609, 720966, 0, 196609, 720967, 0, 196609, 720968, 0, 196609, 720969, 0, 196609, 720970, 0, 196609, -393177, 0, 589830, -393139, 0, 196614, -131084, 0, 131078, -196620, 0, 131078, -262156, 0, 6, -327692, 0, 131078, -327691, 0, 65542, -327690, 0, 65542, -327689, 0, 65542, -327688, 0, 65542, -327687, 0, 65542, -327686, 0, 65542, -327685, 0, 65542, -327684, 0, 65542, -327683, 0, 65542, -327682, 0, 65542, -327681, 0, 65542, -393216, 0, 65542, -393207, 0, 65542, -393206, 0, 65542, -393205, 0, 196614, 458759, 0, 65542, 458758, 0, 65542, 458757, 0, 65542, 458756, 0, 65542, 458755, 0, 65542, 458754, 0, 65542, 458753, 0, 65542, 458752, 0, 65542, 524285, 0, 65542, 524284, 0, 65542, 524283, 0, 65542, 524282, 0, 65542, 524281, 0, 65542, 524280, 0, 65542, 524279, 0, 65542, 524278, 0, 65542, 524277, 0, 65542, 524276, 0, 131078, 458740, 0, 131078, 393204, 0, 131078, 327668, 0, 131078, 262132, 0, 131078, 196596, 0, 131078, -12, 0, 131078, -65548, 0, 131078, -65453, 0, 6, -393213, 0, 720902, -65547, 0, 720902, -65546, 0, 720902, -65545, 0, 720902, -65544, 0, 720902, -65543, 0, 720902, -65542, 0, 720902, -65541, 0, 720902, -65540, 0, 720902, -65539, 0, 720902, -65538, 0, 720902, -131063, 0, 589830, -131062, 0, 589830, -131061, 0, 589830, -131070, 0, 720902, -131069, 0, 720902, -131068, 0, 720902, 393227, 0, 655366, 327691, 0, 655366, 262155, 0, 655366, 196619, 0, 655366, 131083, 0, 655366, -196597, 0, 655366, -262133, 0, 655366, -327669, 0, 655366, 262154, 0, 655360, 262153, 0, 655360, 262152, 0, 655360, 262151, 0, 655360, 262150, 0, 655360, 262149, 0, 655360, 262148, 0, 655360, 262147, 0, 655360, 262146, 0, 655360, 262145, 0, 655360, 262144, 0, 655360, 327679, 0, 655360, 327678, 0, 655360, 327671, 0, 655360, 327670, 0, 655360, 327669, 0, 655360, 327677, 0, 655360, 327676, 0, 655360, 327675, 0, 655360, 327674, 0, 655360, 327673, 0, 655360, 327672, 0, 655360, -131060, 0, 589830, -131059, 0, 589830, 393251, 0, 524294, -196573, 0, 524294, -262109, 0, 524294, -327645, 0, 524294, 131131, 0, 6, 196667, 0, 6, 262203, 0, 6, 327739, 0, 6, 393275, 0, 6, 35, 0, 6, -131037, 0, 6, -131058, 0, 196614, -131057, 0, 196614, -131056, 0, 196614, -131055, 0, 196614, -131054, 0, 196614, -131053, 0, 196614, -131052, 0, 196614, -131051, 0, 196614, -131050, 0, 196614, -131049, 0, 196614, -65501, 0, 131078, 65595, 0, 6, 59, 0, 6, -65477, 0, 6, -131013, 0, 6, 131115, 0, 65542, -131024, 0, 196614, -131023, 0, 196614, -131022, 0, 196614, -131021, 0, 196614, -131020, 0, 196614, -131019, 0, 196614, -131018, 0, 196614, -131017, 0, 196614, -131016, 0, 196614, -131015, 0, 196614, -131014, 0, 196614, -131025, 0, 196614, -131026, 0, 196614, -131027, 0, 196614, -131028, 0, 196614, -131029, 0, 196614, -131030, 0, 196614, -131031, 0, 196614, -131032, 0, 196614, -131033, 0, 196614, 131103, 0, 65542, 131104, 0, 65542, 131105, 0, 65542, 131106, 0, 65542, 131107, 0, 65542, 131108, 0, 65542, 131109, 0, 65542, 131110, 0, 65542, 131111, 0, 65542, 131112, 0, 65542, 131113, 0, 65542, 131114, 0, 65542, 131116, 0, 65542, 131117, 0, 65542, 131118, 0, 65542, 131119, 0, 65542, 131120, 0, 65542, 131121, 0, 65542, 131122, 0, 65542, 131123, 0, 65542, 131124, 0, 65542, 131125, 0, 65542, 131126, 0, 65542, 131127, 0, 65542, 65571, 0, 131078, -131048, 0, 65542, 29, 0, 196614, 30, 0, 6, 31, 0, 65537, 32, 0, 65537, 33, 0, 65537, 34, 0, 65537, -131041, 0, 65537, -131040, 0, 65537, -131039, 0, 65537, -131038, 0, 65537, -262132, 0, 65537, -262131, 0, 65537, -262130, 0, 65537, -262129, 0, 65537, -262128, 0, 65537, -262127, 0, 65537, -262126, 0, 65537, -262125, 0, 65537, -262124, 0, 65537, -262123, 0, 65537, -262122, 0, 65537, -262121, 0, 65537, -262120, 0, 65537, -262113, 0, 65537, -262112, 0, 65537, -262111, 0, 65537, -262110, 0, 65537, -196609, 0, 589830, -196610, 0, 6, -131074, 0, 6, -262146, 0, 6, -131012, 0, 196614, -131011, 0, 196614, -131010, 0, 196614, -131009, 0, 196614, -131008, 0, 196614, -131007, 0, 196614, -131006, 0, 196614, -131005, 0, 196614, -131004, 0, 196614, -131003, 0, 196614, -131002, 0, 196614, -131001, 0, 196614, 131145, 0, 196614, 131146, 0, 196614, 131147, 0, 196614, 131148, 0, 196614, 131149, 0, 196614, 131150, 0, 196614, 131151, 0, 196614, 131152, 0, 196614, 131153, 0, 196614, 131154, 0, 196614, -130999, 0, 196614, -131000, 0, 196614, -130998, 0, 196614, -262066, 0, 196614, -262067, 0, 196614, -65463, 0, 0, 73, 0, 0, 65609, 0, 0, 393283, 0, 1, 327747, 0, 1, 262211, 0, 1, 196675, 0, 1, 131139, 0, 196614, 65603, 0, 0, 67, 0, 0, -65469, 0, 0, 65615, 0, 3, 79, 0, 3, -65457, 0, 3, -130993, 0, 3, -327601, 0, 3, -196529, 0, 3, -262065, 0, 3, 80, 0, 0, 65617, 0, 0, 82, 0, 0, -65455, 0, 0, -130992, 0, 0, -130990, 0, 0, -196527, 0, 0, -262064, 0, 0, -262062, 0, 0, -327599, 0, 0, 131060, 0, 131078, 65524, 0, 131078, 61, 0, 196614, 60, 0, 196614, -65476, 0, 3, -65475, 0, 3, 131138, 0, 196614, 131140, 0, 196614, 131102, 0, 196614, 27, 0, 196614, 28, 0, 196614, 26, 0, 196614, 65566, 0, 6, -65506, 0, 6, 393246, 0, 0, 327710, 0, 0, 262174, 0, 0, 196638, 0, 0, -262154, 0, 0, -196618, 0, 0, -131082, 0, 0, -131080, 0, 0, -196616, 0, 0, -262152, 0, 0, -131078, 0, 0, -196614, 0, 0, -262150, 0, 0, -262148, 0, 0, -196612, 0, 0, -131076, 0, 0, -196598, 0, 3, -196599, 0, 3, -262135, 0, 3, -327671, 0, 3, -327670, 0, 3, -262134, 0, 3, 393208, 0, 1, 458744, 0, 1, 327687, 0, 1, 393223, 0, 1, 458749, 0, 1, 393213, 0, 1, 327682, 0, 1, 393218, 0, 1, 25, 0, 196614, -65511, 0, 6, -131047, 0, 6, -196583, 0, 6, -262119, 0, 6, -327655, 0, 6, -131042, 0, 6, -196578, 0, 6, -262114, 0, 6, -327650, 0, 6, 20, 0, 0, -65516, 0, 0, 65556, 0, 0, 131092, 0, 0, 196628, 0, 0, 262164, 0, 0, 327700, 0, 0, 393236, 0, 0, -131046, 0, 196609, -131045, 0, 196609, -131044, 0, 196609, -131043, 0, 196609, -262115, 0, 196609, -262116, 0, 196609, -262117, 0, 196609, -262118, 0, 196609, -196535, 0, 0, -262071, 0, 0, -327607, 0, 0, 720971, 0, 196609, 589899, 0, 0, 131141, 0, 196614, 196658, 0, 0, 262194, 0, 0, 327730, 0, 0, 393266, 0, 0, -65491, 0, 1, 45, 0, 1, 65581, 0, 1, -327630, 0, 3, -262094, 0, 3, -196558, 0, 3, 196681, 0, 1, 262217, 0, 1, 327753, 0, 1, 393289, 0, 1)
}
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="DividerGridMap" type="GridMap" parent="."]
mesh_library = ExtResource("2_3e86d")
cell_size = Vector3(1, 1, 1)
collision_layer = 4
collision_mask = 0
data = {
"cells": PackedInt32Array(65547, 0, 0, 11, 0, 0, -65525, 0, 0, 196643, 0, 0, 262179, 0, 0, -196549, 0, 0, -262085, 0, 0, -327621, 0, 0, 327715, 0, 131072, 196653, 0, 0, 262189, 0, 0, 327725, 0, 0, 393261, 0, 0, 65586, 0, 0, 50, 0, 0, -65486, 0, 0, -196563, 0, 0, -262099, 0, 0, -327635, 0, 0)
}
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="SupportGridMap" type="GridMap" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.1)
mesh_library = ExtResource("4_iaoa1")
cell_size = Vector3(1, 1, 1)
data = {
"cells": PackedInt32Array(458831, 65534, 0, 393295, 65534, 0, 327759, 65534, 0, 262223, 65534, 0, 196687, 65534, 0, 131151, 65534, 0, 65615, 65534, 0, 79, 65534, 0, -65457, 65534, 0, -130993, 65534, 0, -196529, 65534, 0, -262065, 65534, 0, -327601, 65534, 0, -393137, 65534, 0)
}
metadata/_editor_floor_ = Vector3(0, 0, -2)

[node name="Elevator" parent="." instance=ExtResource("10_hq6hc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 79.5, 3, 0)

[node name="Segments" type="Node3D" parent="."]

[node name="0" type="Node3D" parent="Segments"]

[node name="Spawnpoint" type="Node3D" parent="Segments/0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9, -1, 0)

[node name="CameraAnchors" type="Node3D" parent="Segments/0"]

[node name="Start" type="Marker3D" parent="Segments/0/CameraAnchors"]

[node name="End" type="Marker3D" parent="Segments/0/CameraAnchors"]

[node name="Area3D" type="Area3D" parent="Segments/0"]
collision_layer = 0
collision_mask = 2

[node name="0" type="CollisionShape3D" parent="Segments/0/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.5, 0, 0)
shape = SubResource("BoxShape3D_fd7oj")

[node name="1" type="Node3D" parent="Segments"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 23.5, 0, 0)

[node name="Spawnpoint" type="Node3D" parent="Segments/1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.5, -1, 0)

[node name="CameraAnchors" type="Node3D" parent="Segments/1"]

[node name="Start" type="Marker3D" parent="Segments/1/CameraAnchors"]

[node name="End" type="Marker3D" parent="Segments/1/CameraAnchors"]

[node name="Area3D" type="Area3D" parent="Segments/1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0)
collision_layer = 0
collision_mask = 2

[node name="0" type="CollisionShape3D" parent="Segments/1/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.5, 0, 0)
shape = SubResource("BoxShape3D_fd7oj")

[node name="1" type="CollisionShape3D" parent="Segments/1/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.5, 5, 0)
shape = SubResource("BoxShape3D_fd7oj")

[node name="2" type="Node3D" parent="Segments"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 47.5, 0, 0)

[node name="Spawnpoint" type="Node3D" parent="Segments/2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.5, 3, 0)

[node name="CameraAnchors" type="Node3D" parent="Segments/2"]

[node name="Start" type="Marker3D" parent="Segments/2/CameraAnchors"]

[node name="End" type="Marker3D" parent="Segments/2/CameraAnchors"]

[node name="Area3D" type="Area3D" parent="Segments/2"]
collision_layer = 0
collision_mask = 2

[node name="0" type="CollisionShape3D" parent="Segments/2/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11, 5, 0)
shape = SubResource("BoxShape3D_fd7oj")

[node name="1" type="CollisionShape3D" parent="Segments/2/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11, -3.5, 0)
shape = SubResource("BoxShape3D_fd7oj")

[node name="3" type="Node3D" parent="Segments"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 71.5, 0, 0)

[node name="Spawnpoint" type="Node3D" parent="Segments/3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.5, -5, 0)

[node name="CameraAnchors" type="Node3D" parent="Segments/3"]

[node name="Start" type="Marker3D" parent="Segments/3/CameraAnchors"]

[node name="End" type="Marker3D" parent="Segments/3/CameraAnchors"]

[node name="Area3D" type="Area3D" parent="Segments/3"]
collision_layer = 0
collision_mask = 2

[node name="0" type="CollisionShape3D" parent="Segments/3/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11, -3, 0)
shape = SubResource("BoxShape3D_fd7oj")

[node name="Ball" parent="." instance=ExtResource("2_wve0c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16, 0.5, 0)

[node name="MoveBillboard" type="Sprite3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -5, 0.2, 0)
shaded = true
texture = ExtResource("4_wsqqa")

[node name="Move" type="Sprite3D" parent="MoveBillboard"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0.001)
transparent = false
shaded = true
texture = ExtResource("5_b1r6f")

[node name="JumpBillboard" type="Sprite3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 3.5, 0.2, 0)
shaded = true
texture = ExtResource("4_wsqqa")

[node name="Jump" type="Sprite3D" parent="JumpBillboard"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0.001)
transparent = false
shaded = true
texture = ExtResource("6_fhjhi")

[node name="StrikeBillboard" type="Sprite3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 23, 0.2, 0)
shaded = true
texture = ExtResource("4_wsqqa")

[node name="Strike" type="Sprite3D" parent="StrikeBillboard"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0.001)
transparent = false
shaded = true
texture = ExtResource("7_uarlv")

[node name="AimBillboard" type="Sprite3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 28, 2.2, 0)
shaded = true
texture = ExtResource("4_wsqqa")

[node name="Aim" type="Sprite3D" parent="AimBillboard"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0.001)
transparent = false
shaded = true
texture = ExtResource("5_vycf1")

[connection signal="reached" from="Elevator" to="." method="_on_elevator_reached"]
[connection signal="started" from="Elevator" to="." method="_on_elevator_started"]
[connection signal="body_entered" from="Segments/0/Area3D" to="." method="_on_0_area_3d_body_entered"]
[connection signal="body_entered" from="Segments/1/Area3D" to="." method="_on_1_area_3d_body_entered"]
[connection signal="body_entered" from="Segments/2/Area3D" to="." method="_on_2_area_3d_body_entered"]
[connection signal="body_entered" from="Segments/3/Area3D" to="." method="_on_3_area_3d_body_entered"]
